--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,9 +7,28 @@
 	"name": "mavrick-mobile-gateway",
 	"main": "src/index.js",
 	"compatibility_date": "2025-12-20",
+	// Fix for Gatway to provider communication
+	"services": [
+		{
+		"binding": "PROVIDER",
+		"service": "mock-enrichment-provider"
+		}
+	],
+	// Fix for Gatway to provider communication
 	"observability": {
 		"enabled": true
+	},
+
+	"vars": {
+		"WORKER_API_KEY": "NATSIKAP_4321",
+		"PROVIDER_API_KEY": "MobProvKey123",
+		// "PROVIDER_API_URL": "http://localhost:3000/enrich"
+		"PROVIDER_API_URL": "https://mock-enrichment-provider.shafqatgreat.workers.dev/enrich"
 	}
+
+
+
+
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
